# Bladesight

./: 404.html  CNAME  LICENSE  README.md  index.html  make_aoa_allocate_loop_gif.ipynb  mkdocs.yml  objects.inv  pyproject.toml  refs.bib
.github/workflows/: ci.yml
assets/: intro_to_btt_ch02_proximity_probe_data.json
bhdl/: index.html
bladesight/: __init__.py  dataset_handler.py  utils.py
bladesight/btt/: __init__.py  align.py  aoa.py  curve_fitting.py  filtering.py  toa_curve_fitting.py  triggering_criteria.py  zero.py
bladesight/btt/infer/: __init__.py  cff.py  sdof.py  sdof_sweep.py
bladesight/btt/probe_spacing/: __init__.py  base_functions.py  example.py  example_copy.ipynb  example_script.py  optimiser.py  probe_spacing_optimiser.py
bladesight/ias/: __init__.py  geometry_compensation.py
calculators/: index.html
docs/: index.md  proximity_probe_data_plot.html
docs/bhdl/: index.md
docs/calculators/: index.md
docs/extreme_stem/: index.md  prob_001.md  prob_002.md
docs/javascripts/: reviews.js
docs/products/: index.md
docs/reference/: dataset_handler.md
docs/reference/btt/: index.md  triggering_criteria.md
docs/stylesheets/: extra.css
docs/tutorials/: index.md
docs/tutorials/datasets/: index.md
docs/tutorials/datasets/diamond_et_al_2024_vary_ramp_rates/: index.md
docs/tutorials/datasets/diamond_et_al_2024_vary_ramp_rates_45/: index.md
docs/tutorials/intro_to_btt/: afterword.md  index.md
docs/tutorials/intro_to_btt/ch1/: index.md
docs/tutorials/intro_to_btt/ch2/: change_in_over_under_indicator.js  index.md
docs/tutorials/intro_to_btt/ch3/: AoA_top_10.csv  blade_5_aoas_using_mpr.js  index.md  shaft_run_up_and_down.js
docs/tutorials/intro_to_btt/ch4/: index.md  preamble_aoa_values_head.csv
docs/tutorials/intro_to_btt/ch5/: index.md  rotor_blade_1_df_head.csv
docs/tutorials/intro_to_btt/ch6/: blade_1_x_normalized.js  df_blade_1_head.csv  index.md
docs/tutorials/intro_to_btt/ch7/: campbell_diagram.js  index.md  once_per_revolution_force_edt.js
docs/tutorials/intro_to_btt/ch8/: c08_resonance_1_simple_fit.js  c08_resonance_multi_probe_1.js  index.md
docs/tutorials/intro_to_btt/ch9/: index.md
docs/tutorials/mpr_encoder_processing/ch1/: index.md
extreme_stem/: index.html
extreme_stem/prob_001/: index.html
extreme_stem/prob_002/: index.html
javascripts/: intro_to_btt_ch02_proximity_probe_data.js  intro_to_btt_data_load.js  mathjax.js
overrides/: intro_to_btt_ch2.html  main.html  main_datasets.html  main_intro_to_btt.html  main_intro_to_btt_ch3.html  main_intro_to_btt_ch4.html  main_intro_to_btt_ch5.html  main_intro_to_btt_ch6.html  main_intro_to_btt_ch7.html  main_intro_to_btt_ch8.html  main_intro_to_btt_ch9.html
overrides/partials/: nav.html  toc.html
products/: index.html
reference/btt/: index.html
reference/btt/triggering_criteria/: index.html
reference/dataset_handler/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: test_dataset_handler.py  test_download_datasets.py  test_monkeypatched_s3_get.py
tests/btt/: test_triggering_criteria.py
tutorials/: index.html
tutorials/datasets/: index.html
tutorials/datasets/diamond_et_al_2024_vary_ramp_rates_45/: index.html
tutorials/intro_to_btt/: index.html
tutorials/intro_to_btt/afterword/: index.html
tutorials/intro_to_btt/ch1/: index.html
tutorials/intro_to_btt/ch2/: eddy_current_probe_raw.js  index.html  over_under_indicator.js  proximity_probe_data.js  three_pulses.js  three_pulses_head.csv  three_pulses_noisy.js
tutorials/intro_to_btt/ch3/: blade_1_aoas.js  index.html
tutorials/intro_to_btt/ch4/: all_aoas_histogram.js  aoa_top_10.csv  calculate_align.py  index.html  q_factor_plot.js  wrapped_aoa_histogram.js
tutorials/intro_to_btt/ch5/: blade_dfs_recombined_head.csv  index.html  rotor_blade_5_df_head.csv  stack_plot_probe_1.js  stack_plot_probe_whole_rotor.js  stack_plot_probe_whole_rotor_aligned.js
tutorials/intro_to_btt/ch6/: blade_1_aoas_raw.js  blade_1_x_detrended.js  blade_1_x_filtered.js  blade_1_x_pk_pk.js  blade_1_x_pk_pk_vs_shaft_speed.js  blade_1_x_poly_normalised.js  blade_1_x_vs_RPM.js  index.html
tutorials/intro_to_btt/ch7/: ch07_worksheet.ipynb  fft_once_per_revolution_force_edt.js  index.html
tutorials/intro_to_btt/ch8/: c08_blade_1_pk_pk.js  c08_resonance_1_EO_selection.js  c08_resonance_1_improved_fit.js  c08_resonance_1_simple_fit.js  c08_resonance_multi_probe_2.js  c08_resonance_multi_probe_3.js  c08_resonance_multi_probe_4.js  index.html
tutorials/intro_to_btt/ch9/: c09_cff_simple_amp.js  c09_cff_simple_phase.js  c09_cff_simple_probe_1.js  c09_cff_simple_probe_2.js  c09_cff_simple_probe_3.js  c09_cff_simple_probe_4.js  c09_resonance_1_EO_selection.js  index.html
tutorials/mpr_encoder_processing/ch1/: index.html
