[project]
name = "bladesight"
version = "0.17.0"
description = "Bladesight provides comprehensive tools for introductory Blade Tip Timing analysis."
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "duckdb>=1.0.0",
    "numba>=0.57.0",
    "pandas>=1.5.1",
    "polars>=0.19.2",
    "pyarrow>=17.0.0",
    "s3fs>=2023.9.0",
    "scipy>=1.11.3",
    "tqdm>=4.65.0",
    "typing-extensions>=4.12.2",
    "yaspin>=3.0.1",
    "pyswarm = ^0.6",
    "scipy = ^1.12.0",

]
authors = [
    { name = "Dawie Diamond", email = "dawie.diamond@bladesight.com" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://www.bladesight.com/"
Documentation = "https://docs.bladesight.com/"
Repository = "https://github.com/Bladesight/Bladesight"

[dependency-groups]
docs = [
    "mkdocs-bibtex>=2.11.0",
    "mkdocs-material>=9.1.8",
    "mkdocs-table-reader-plugin>=2.0",
    "mkdocs>=1.4.2",
    "mkdocstrings[python]>=0.24.0",
    "plotly>=5.14.1",
]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.23.1",
    "ipython>=8.13.2",
    "isort>=5.13.2",
    "pytest>=8.3.4",
]
test = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
